fix on margins for pages without scrollbars

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -388,6 +388,11 @@ div h6 {
     }
 }
 
+#no-scrollbar{
+    max-width: 40%;
+    margin-left: 5em;
+}
+
 @media (max-width: 1000px){
     #background, .container{
         visibility: hidden;
